adds ability to click button and get pokemon name printed on screen

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-    
+    <button data-trigger>Pokemon Name</button>
+    <ul data-output>
+
+    </ul>
     <script src="scripts/index.js"></script>
 </body>
 </html>
