adds attempt at next and previous pokemon buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <button data-trigger>Pokemon Name</button>
+    <button data-prev>Previous</button>
+    <button data-next>Next</button>
     <ul data-output>
 
     </ul>
