--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <button data-trigger>Pokemon Name</button>
     <button data-prev>Previous</button>
     <button data-next>Next</button>
-    <ul data-output>
-
+    <ul>
+        <li>
+            <a href="#" data-output></a>
+        </li>
     </ul>
     <script src="scripts/index.js"></script>
 </body>
