--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <button data-trigger>Pokemon Name</button>
     <button data-prev>Previous</button>
     <button data-next>Next</button>
-    <ul>
+    <ul data-output="">
         <li>
-            <a href="#" data-output></a>
+            
         </li>
     </ul>
     <script src="scripts/index.js"></script>
